--- a/css/styles.css
+++ b/css/styles.css
@@ -97,6 +97,13 @@ body {
     max-width: 90vh;
     padding: 10vh; /* Reduce padding for phones */
   }
+  ul{
+    display:flex;
+    align-items: center;  
+    flex-direction: column;
+    
+
+  }
 }
 
 /* For Tablets */
